2012-08-16  Hans Rakers <hans at rakers.org>

	* Remove current memory protection implementation. This code has
	  been dead for a while now
	* Re-enabled some EQUAL/NOT_EQUAL optimisations in the optimizer
	* Removed duplicate macro CONSTANT() and rewrote all its occurances
	  to OPx_CONST
	* Removed old code related to BRK/CONT handling
	* Some cosmetic fixes to optimize.c

2012-08-13  Hans Rakers <hans at rakers.org>

	* Fixed CONCAT/ADD_STRING + ADD_CHAR optimizer bug
	* Removed unused var in reassign_registers

2012-08-10  Hans Rakers <hans at rakers.org>

	* Small tweaks to the disassembler:
	  - Display zval properly ignoring all non-relevant extra flags
	    possible on zval type (>=php-5.3)
	  - display op1 properly on FETCH_CONSTANT and
	    INIT_STATIC_METHOD_CALL (>=php 5.4)

2012-08-08  Hans Rakers <hans at rakers.org>

	* Fixed a longstanding issue regarding exceptions in the optimizer.
	  The optimizer removed try/catch blocks resulting in exceptions not
	  being caught.

	  This also solves Drupal 7 installation issues when using eAccelerator
	  (tested with Drupal 7.15 and PHP 5.4.5)
	* Update Win32 VC project files
	* Fixed several Win32 compilation issues, thanks @tengattack

2012-08-06  Hans Rakers <hans at rakers.org>

	* Fixed memory leaks in restore_hash() and the optimizer
	* Fixed several issues in the optimizer related to result type
	  checking / setting (PHP 5.4 uses op.result_type for both result
	  type and 'result used mask' instead of two seperate values)
	* Fixed displaying of function/method names in the disassembler
	* Fixed handling of fetch ops by the optimizer and the disassembler

2012-07-30  Hans Rakers <hans at rakers.org>

	* Fixed open_basedir issues as reported on the old Trac site
	* Removed key/value store and session handler bits from config.w32
	  and added doc-comment-inclusion. Win32 project files also need
	  updating but i currently don't have a win32 development station